--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 # bootstrap.properties
 spring.cloud.config.uri=http://localhost:51000/config
 spring.cloud.config.label=master
-spring.profiles.active=default
+spring.profiles.active=local
 spring.cloud.config.name=totp-binder-service
 spring.application.name=totp-binder-service
 
@@ -18,3 +18,16 @@ openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
 openapi.service.servers[0].description=TOTP Binding Service
 springdoc.swagger-ui.disable-swagger-default-url=true
 spring.mvc.servlet.path=${server.servlet.path}
+
+
+#Swagger 3.0
+openapi.info.title=TOTP Binder Service API documentation
+openapi.info.description=TOTP Binder Service API documentation
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+
+------OpenApi properties--------
+mosipbox.public.url=http://localhost:9093
+openapi.service.servers[0].url=${mosipbox.public.url}/v1/totp
+openapi.service.servers[0].description= TOTP binder service
