Updated all helm-charts for totp-binder-service.

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 # bootstrap.properties
 spring.cloud.config.uri=http://localhost:51000/config
 spring.cloud.config.label=master
-spring.profiles.active=local
+spring.profiles.active=default
 spring.cloud.config.name=totp-binder-service
 spring.application.name=totp-binder-service
 
